Implement some basic text logic with state

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   </head>
   <body class="flex items-center justify-center vh-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="w-75 center ba b--black-10">
+    <div style="width: 45%" class="w-75 center ba b--black-10">
       <div id="root"></div>
     </div>
   </body>
